k8s/traefik/zipkin.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: kube-system
  labels:
    app: zipkin
spec:
  ports:
    - nodePort: 32411
      port: 9411
  selector:
    app: zipkin
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: zipkin
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zipkin
        tier: backend
    spec:
      containers:
      - image: openzipkin/zipkin
        name: zipkin     
        ports:
        - containerPort: 9411
          name: zipkin
